--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -65,6 +65,43 @@
 </ul>
 
 
+<h3>5. GDPR – Your Rights (EU Users)</h3>
+<ul>
+    <li>Under GDPR, you have the right to:</li>
+    <li>Access, correct, or delete your personal data</li>
+    <li>Withdraw consent at any time</li>
+    <li>Data portability</li>
+    <li>Restrict or object to processing</li>
+    <li>To exercise these rights, contact us at saffet57siraz@gmail.com.</li>
+</ul>
+<h3>6. Third-Party Services</h3>
+    <ul>
+        <li>We use the following third-party services which may collect information as described in their privacy policies:</li>
+        <li>Google AdMob – AdMob Privacy Policy</li>
+        <li>Google Play Services – Google Play Privacy Policy</li>
+    </ul>
+
+<h3>7. Children’s Privacy</h3>
+<ul>
+    <li>Our game is designed for everyone but is not directed to children under 13. We do not knowingly collect personal data from children. If you believe we have collected such data, please contact us for deletion.</li>
+</ul>
+
+<h3>8. Data Security</h3>
+<ul>
+    <li>We take reasonable measures to protect your data from unauthorized access, alteration, or destruction.</li>
+</ul>
+<h3>9. Changes to This Policy</h3>
+    <ul>
+        <li>We may update this Privacy Policy from time to time. The latest version will always be available in our app and on our official link.</li>
+    </ul>
+
+<h3>10. Contact Us</h3>
+<ul>
+    <li>If you have any questions about this Privacy Policy, please contact us at:</li>
+    <li>Email: saffet57siraz@gmail.com</li>
+</ul>
+
+
 
 
 
