--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Saffet Şiraz</h1>
         <nav>
             <a href="#games">Oyunlar</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
             <a href="#contact">İletişim</a>
         </nav>
     </header>
