--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
     <header>
         <h1>Saffet Şiraz</h1>
         <nav>
-            <a href="#games">Oyunlar</a>
+            <a href="#games">Games</a>
             <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="#contact">İletişim</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
     <section id="games">
-        <h2>Oyunlar</h2>
-        <ul>
-            <li>Merge Buddies</li>
-        </ul>
+        <h2>Games</h2>        
+            <a href="https://play.google.com/store/apps/details?id=com.Merge.Fellas.Drop.Master.MergeBuddies">Merge Buddies</a>    
     </section>
 
     <section id="contact">
-        <h2>İletişim</h2>
+        <h2>Contact</h2>
         <p>Email: saffet57siraz@gmail.com</p>
     </section>
 
