--- a/index.html
+++ b/index.html
@@ -1,32 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saffet Şiraz</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Saffet Şiraz</h1>
-        <nav>
-            <a href="#games">Games</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-    <section id="games">
-        <h2>Games</h2>        
-            <a href="https://play.google.com/store/apps/details?id=com.Merge.Fellas.Drop.Master.MergeBuddies">Merge Buddies</a>    
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: saffet57siraz@gmail.com</p>
-    </section>
-
-    <footer>
-        <p>© 2025 Saffet Şiraz</p>
-    </footer>
-</body>
-</html>
+---
+layout: default
+---
